@@ -13,11 +13,13 @@ duplicated.data.table <- function(x, incomparables=FALSE,
     if (query$use.keyprefix) {
         res[duplist(x[, query$by, with=FALSE], tolerance=tolerance)] = FALSE
     } else {
-        xx <- x[, query$by, with=FALSE]
+        # changed from x[, query$by, with=FALSE]
+        xx <- as.list(x)[query$by] # seems to be tad faster
         o = fastorder(xx)
-        f = o[duplist(xx, o, tolerance=tolerance)]
-        f = f[sort.list(f, na.last=FALSE, decreasing=FALSE)]
-        # TO DO: remove sort.list call by replacing fastorder with fastgroup
+        # replaced duplist with rlixlist - incremental memory allocation
+        f = o[rlixlist(xx, o, tolerance=tolerance)[[1]]]
+        # spotted and commented. sort.list not necessary here for duplicated.data.table
+        # f = f[sort.list(f, na.last=FALSE, decreasing=FALSE)]
         res[f] = FALSE
     }
 
